--- a/src/pretix/presale/templates/pretixpresale/event/fragment_cart.html
+++ b/src/pretix/presale/templates/pretixpresale/event/fragment_cart.html
@@ -7,6 +7,9 @@
             {% if line.variation %}
                 – {{ line.variation }}
             {% endif %}
+            {% if line.voucher %}
+                <br /><span class="fa fa-ticket"></span> {% trans "Voucher code used:" %} {{ line.voucher.code }}
+            {% endif %}
         {% if line.has_questions %}
             <dl>
                 {% if line.item.admission and event.settings.attendee_names_asked%}
