--- a/src/pretix/base/templates/error.html
+++ b/src/pretix/base/templates/error.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" type="text/less" href="{% static "pretixbase/less/error.less" %}" />
     {% endcompress %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="{% static "pretixbase/img/favicon.ico" %}">
 </head>
 <body>
 <div class="container">
