--- a/src/pretix/control/templates/pretixcontrol/base.html
+++ b/src/pretix/control/templates/pretixcontrol/base.html
@@ -19,6 +19,7 @@
 		{% endcompress %}
         {{ html_head|safe }}
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="{% static "pretixbase/img/favicon.ico" %}">
 	</head>
 	<body>
         <div id="#wrapper">
