--- a/src/pretix/presale/templates/pretixpresale/base.html
+++ b/src/pretix/presale/templates/pretixpresale/base.html
@@ -17,6 +17,7 @@
     {% endcompress %}
     {{ html_head|safe }}
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="{% static "pretixbase/img/favicon.ico" %}">
 </head>
 <body>
 <div class="container">
