Only load Stripe.js if necessary

--- a/src/pretix/plugins/stripe/templates/pretixplugins/stripe/checkout_payment_form.html
+++ b/src/pretix/plugins/stripe/templates/pretixplugins/stripe/checkout_payment_form.html
@@ -4,6 +4,11 @@
     <div class="stripe-errors sr-only">
 
     </div>
+    <noscript>
+        <div class="alert alert-warning">
+            {% trans "For a credit card payment, please turn on JavaScript." %}
+        </div>
+    </noscript>
     <div class="form-group stripe-number">
         <label class="control-label col-sm-2">
             {% trans "Credit card number" %}
