--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -172,7 +172,7 @@
                             </div>
                             <div id="voucher-toggle">
                                 <a href="javascript:void(0);">
-                                    <span class="fa fa-ticket"></span> Redeem a voucher
+                                    <span class="fa fa-ticket"></span> {% trans "Redeem a voucher" %}
                                 </a>
                             </div>
                         </div>
