Fixed noscript variant of voucher redemption

--- a/src/static/pretixpresale/less/event.less
+++ b/src/static/pretixpresale/less/event.less
@@ -28,6 +28,9 @@
         display: block;
     }
 }
+#voucher-toggle {
+    display: none;
+}
 .item-with-variations .product-row.headline, .product-row.simple {
     border-top: 2px solid @table-border-color;
 }
