Added invoice addresses

--- a/src/pretix/control/templates/pretixcontrol/order/index.html
+++ b/src/pretix/control/templates/pretixcontrol/order/index.html
@@ -176,4 +176,33 @@
             {% endif %}
         </div>
     </div>
+    {% if request.event.settings.invoice_address_asked %}
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">
+                    {% trans "Invoice information" %}
+                </h3>
+            </div>
+            <div class="panel-body">
+                <dl class="dl-horizontal">
+                    <dt>{% trans "Company" %}</dt>
+                    <dd>{{ order.invoice_address.company }}</dd>
+                    <dt>{% trans "Name" %}</dt>
+                    <dd>{{ order.invoice_address.name }}</dd>
+                    <dt>{% trans "Address" %}</dt>
+                    <dd>{{ order.invoice_address.street|linebreaksbr }}</dd>
+                    <dt>{% trans "ZIP code and city" %}</dt>
+                    <dd>{{ order.invoice_address.zipcode }} {{ addr.city }}</dd>
+                    <dt>{% trans "Country" %}</dt>
+                    <dd>{{ order.invoice_address.country }}</dd>
+                    <dt>{% trans "Phone" %}</dt>
+                    <dd>{{ order.invoice_address.phone }}</dd>
+                    {% if request.event.settings.invoice_address_vatid %}
+                        <dt>{% trans "VAT ID" %}</dt>
+                        <dd>{{ order.invoice_address.vat_id }}</dd>
+                    {% endif %}
+                </dl>
+            </div>
+        </div>
+    {% endif %}
 {% endblock %}
