--- a/src/pretix/control/templates/pretixcontrol/event/settings.html
+++ b/src/pretix/control/templates/pretixcontrol/event/settings.html
@@ -41,6 +41,9 @@
             {% bootstrap_field sform.max_items_per_order layout="horizontal" %}
             {% bootstrap_field sform.attendee_names_asked layout="horizontal" %}
             {% bootstrap_field sform.attendee_names_required layout="horizontal" %}
+            {% bootstrap_field sform.invoice_address_asked layout="horizontal" %}
+            {% bootstrap_field sform.invoice_address_required layout="horizontal" %}
+            {% bootstrap_field sform.invoice_address_vatid layout="horizontal" %}
         </fieldset>
         <div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
