--- a/src/static/pretixcontrol/less/main.less
+++ b/src/static/pretixcontrol/less/main.less
@@ -85,3 +85,30 @@ nav.navbar {
         margin-left: 0;
     }
 }
+
+.dashboard > div {
+    padding: 5px;
+}
+.dashboard .widget {
+    min-height: 160px;
+    background: #F8F8F8;
+    display: block;
+    position: relative;
+}
+.dashboard .widget:hover,.dashboard .widget:focus {
+    background: #EEEEEE;
+    text-decoration: none;
+}
+.dashboard .numwidget {
+    .num {
+        display: block;
+        padding: 28px 0 10px;
+        text-align: center;
+        font-size: 40px;
+    }
+    .text {
+        display: block;
+        text-align: center;
+        font-size: 20px;
+    }
+}
