Fixed #29 -- "Shop is live" flag

--- a/src/pretix/control/templates/pretixcontrol/event/base.html
+++ b/src/pretix/control/templates/pretixcontrol/event/base.html
@@ -1,5 +1,6 @@
 {% extends "pretixcontrol/base.html" %}
 {% load i18n %}
+{% block title %}{{ request.event.name }}{% endblock %}
 
 {% block nav %}
     <li>
