--- a/src/pretix/presale/templates/pretixpresale/base.html
+++ b/src/pretix/presale/templates/pretixpresale/base.html
@@ -20,6 +20,8 @@
     <link rel="icon" href="{% static "pretixbase/img/favicon.ico" %}">
 </head>
 <body>
+{% block above %}
+{% endblock %}
 <div class="container">
     {% block page %}
     {% endblock %}
