--- a/src/static/pretixcontrol/less/main.less
+++ b/src/static/pretixcontrol/less/main.less
@@ -112,3 +112,19 @@ nav.navbar {
         font-size: 20px;
     }
 }
+.dashboard .shopstate {
+    text-align: center;
+    padding: 36px 0;
+
+    span.live, span.off {
+        display: block;
+        font-size: 20px;
+        padding: 10px 0;
+    }
+    span.live {
+        color: @brand-success;
+    }
+    span.off {
+        color: @brand-danger;
+    }
+}
