--- a/src/static/pretixpresale/less/event.less
+++ b/src/static/pretixpresale/less/event.less
@@ -79,6 +79,18 @@
 .checkout-button-row {
     padding: 15px 0;
 }
+.offline-banner {
+    background: @brand-danger;
+    color: white;
+    width: 100%;
+    padding: 5px;
+    text-align: center;
+
+    a {
+        text-decoration: underline;
+        color: white;
+    }
+}
 @media (max-width: @screen-sm-max) {
     .checkout-button-row div {
         margin-bottom: 10px;
