--- a/src/pretix/presale/templates/pretixpresale/event/base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/base.html
@@ -5,11 +5,25 @@
 {% block thetitle %}
     {% block title %}{% endblock %}{% if url_name != "event.index" %} :: {% endif %}{{ event.name }}
 {% endblock %}
+{% block above %}
+    {% if not event.live %}
+        <div class="offline-banner">
+            <div class="container">
+                <span class="fa fa-user-secret"></span>
+                {% trans "This shop is currently only visible to you and your team." %}
+                <a href="{{ site_url }}{% url "control:event.live" event=event.slug organizer=event.organizer.slug %}">
+                    {% trans "Take it live now" %}
+                </a>
+            </div>
+        </div>
+    {% endif %}
+{% endblock %}
 {% block page %}
     <div class="page-header">
         <h1 class="pull-left">
             <a href="{% eventurl event "presale:event.index" %}">{{ event.name }}</a>
-            <small>{{ event.date_from|date:"DATE_FORMAT" }}{% if event.settings.show_date_to %} – {{ event.date_to|date:"DATE_FORMAT" }}{% endif %}</small>
+            <small>{{ event.date_from|date:"DATE_FORMAT" }}{% if event.settings.show_date_to %} –
+                {{ event.date_to|date:"DATE_FORMAT" }}{% endif %}</small>
         </h1>
         <div class="pull-right loginbox">
             {% if request.event.settings.locales|length > 1 %}
@@ -17,7 +31,7 @@
                     {% for l in request.event.settings.locales %}
                         {% if l != request.LANGUAGE_CODE %}
                             <a href="{% url "presale:locale.set" %}?locale={{ l }}&next={{ request.path }}%3F{{ request.META.QUERY_STRING|urlencode }}">
-                                <img src="{% static "pretixbase/img/flags" %}/{{ l }}.png" />
+                                <img src="{% static "pretixbase/img/flags" %}/{{ l }}.png"/>
                             </a>
                         {% endif %}
                     {% endfor %}
