--- a/src/static/pretixcontrol/less/main.less
+++ b/src/static/pretixcontrol/less/main.less
@@ -132,3 +132,25 @@ h1 .btn-sm {
         color: @brand-danger;
     }
 }
+.dashboard .event {
+    text-align: center;
+    padding: 30px;
+    font-size: 20px;
+
+    span.from, span.to {
+        display: block;
+        font-size: 25px;
+    }
+}
+.dashboard .newevent {
+    text-align: center;
+    padding: 30px;
+    font-size: 20px;
+
+    span.fa {
+        display: block;
+        font-size: 60px;
+        padding-bottom: 15px;
+    }
+
+}
