--- a/src/static/pretixcontrol/less/forms.less
+++ b/src/static/pretixcontrol/less/forms.less
@@ -74,6 +74,10 @@ div[data-formset-body], div[data-formset-form], div[data-nested-formset-form], d
     padding-left: 0;
 }
 
+.question-option-row {
+    padding: 5px 0;
+}
+
 .i18n-form-group input,
 .i18n-form-group textarea {
     .border-top-radius(0px);
