--- a/src/pretix/presale/templates/pretixpresale/event/fragment_cart.html
+++ b/src/pretix/presale/templates/pretixpresale/event/fragment_cart.html
@@ -76,6 +76,12 @@
         </div>
         <div class="col-md-3 col-xs-6 col-md-offset-5 price">
             <strong>{{ event.currency }} {{ cart.payment_fee|floatformat:2 }}</strong>
+            {% if event.settings.tax_rate_default %}
+                <br/>
+                <small>{% blocktrans trimmed with rate=event.settings.tax_rate_default %}
+                    incl. {{ rate }}% taxes
+                {% endblocktrans %}</small>
+            {% endif %}
         </div>
         <div class="clearfix"></div>
     </div>
